Cleaning up more inspections.